# DragonJudge

./: Dockerfile  README.md  docker-compose.yml  dragonjudge.py  pyproject.toml
docs/: algorithm-v1.md
src/: __init__.py  main.py
src/analysis/: dragon_judge.py  emotion.py  report.py
src/core/: config.py  logger.py
src/data/: fetcher.py
tests/: test_dragon_judge.py  test_emotion.py
